--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,15 @@ dependencies {
     //leakCanary内存检测工具
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    //运行时权限
+    implementation 'me.weyye.hipermission:library:1.0.7'
+    // 底部菜单
+    implementation('com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+
+
+    //lottie添加动画效果
+    implementation 'com.airbnb.android:lottie:2.1.0'
+
 }
