--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'  //kapt3插件
 
 
 android {
@@ -14,6 +14,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
+
 
     }
     buildTypes {
@@ -70,7 +72,7 @@ dependencies {
     // 底部菜单
     implementation('com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar') {
         //闭包，防止整体更新
-        exclude group: 'com.android.support', module: 'support-v4'
+        kapt 'com.github.bumptech.glide:compiler:4.7.1'
     }
 
 
@@ -89,4 +91,11 @@ dependencies {
     //implementation ' com.android.support:recyclerview-v7:jar:28.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.0'
+
+    /**
+     * 轮播效果Banner
+     */
+    implementation 'cn.bingoogolapple:bga-banner:2.1.8@aar'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    kapt 'com.github.bumptech.glide:compiler:4.7.1'
 }
